--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,9 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
+
+  #map {
+    position: absolute;
+    width: 100%;
+    height: 500px;
+  }
