--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,81 @@
-  * {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 86vh;
+}
+
+.square {
+  background-color: #2ecc71;
+  width: 100%;
+  height: 550px;
+}
+
+h4 {
+  text-align: center;
+}
+
+#map {
+  position: absolute;
+  width: 100%;
+  height: 500px;
+}
+
+@media screen and (max-width: 840px) {
+
+  main {
+    height:77vh;
   }
 
-  #map {
-    position: absolute;
-    width: 100%;
-    height: 500px;
+  .square{
+    width:95%;
+    height: 85%;
+    background-color: olive;
   }
+}
+
+@media only screen and (max-width: 700px) {
+
+main {
+  height:77vh;
+}
+
+.square {
+  width:85%;
+  height: 75%;
+  background-color: olive;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  main{
+    height:77vh;
+  }
+
+  .square{
+      width:75%;
+      height: 65%;
+    background-color: olive;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+
+main{
+  height:77vh;
+}
+
+.square{
+  width:65%;
+  height: 55%;
+  background-color: olive;
+  }
+}
