--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,81 +1,119 @@
-* {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+*{
+  background-color: #e1d7c7;
 }
-
 
 main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  height: 86vh;
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    height: 86vh;
+  
+  }
 
+  nav{
+    background-color: #7da11a;
+  }
+  #unico{
+    color: #f7f8ed;
+    background-color: #7da11a;
+  }
+  
 .square {
-  background-color: #2ecc71;
-  width: 100%;
-  height: 550px;
-}
+    background-color: #f7f8ed;
+    width: 800px;
+    height: 550px;
+    border-radius: 3%;
+   
 
-h4 {
-  text-align: center;
-}
-
-#map {
-  position: absolute;
-  width: 100%;
-  height: 500px;
-}
-
-@media screen and (max-width: 840px) {
-
-  main {
-    height:77vh;
   }
 
-  .square{
-    width:95%;
-    height: 85%;
-    background-color: olive;
-  }
+  h4{
+      text-align: center;
+      
+    }
+
+    footer{
+      background-color: #7da11a;
+    }
+
+    .text-footer{
+      color: #f7f8ed;
+    } 
+
+    @media screen and (max-width: 950px) {
+        
+        
+    .square{
+            width:800px;
+            height: 500px;
+          background-color: olive;
+        }
+
+    }
+
+    @media  screen and (max-width: 850px){
+
+      .square{
+        width:700px;
+        height: 500px;
+      background-color: olive;
+    }
+
 }
+      
+      
+    
 
-@media only screen and (max-width: 700px) {
+      @media screen and (max-width: 750px) {
+          
+        .square{
+            width:600px;
+            height: 500px;
+          background-color: olive;
+        }
+      }
 
-main {
-  height:77vh;
-}
+      @media only screen and (max-width: 650px) {
+          
+       .square{
+            width:500px;
+            height: 600px;
+          background-color: olive;
+        }
+      }
 
-.square {
-  width:85%;
-  height: 75%;
-  background-color: olive;
-  }
-}
+      @media only screen and (max-width: 500px) {
+          
+        
+        
+        .square{
+            width:400px;
+            height: 600px;
+          background-color: olive;
+        }
+      } 
 
-@media only screen and (max-width: 600px) {
+      @media only screen and (max-width: 400px) {
+          
+        
+        
+        
+        .square{
+            width:300px;
+            height: 500px;
+          background-color: olive;
+        }
+      } 
 
-  main{
-    height:77vh;
-  }
-
-  .square{
-      width:75%;
-      height: 65%;
-    background-color: olive;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-
-main{
-  height:77vh;
-}
-
-.square{
-  width:65%;
-  height: 55%;
-  background-color: olive;
-  }
-}
+      @media only screen and (max-width: 300px) {
+          
+        
+        
+        
+        .square{
+            width:200px;
+            height: 400px;
+          background-color: olive;
+        }
+      } 
