--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,3 +8,111 @@
     width: 100%;
     height: 500px;
   }
+
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    height: 86vh;
+  
+  }
+
+  nav{
+    background-color: #7da11a;
+  }
+
+  #unico{
+    color: #f7f8ed;
+    background-color: #7da11a;
+  }
+  
+.square {
+    background-color: #f7f8ed;
+    width: 800px;
+    height: 550px;
+    border-radius: 3%;
+   
+  }
+
+  h4{
+      text-align: center;
+      
+    }
+
+    footer{
+      background-color: #7da11a;
+    }
+
+    .text-footer{
+      color: #f7f8ed;
+    } 
+
+    @media screen and (max-width: 950px) {
+        
+        
+    .square{
+            width:800px;
+            height: 500px;
+          background-color: olive;
+        }
+
+    }
+
+    @media  screen and (max-width: 850px){
+
+      .square{
+        width:700px;
+        height: 500px;
+      background-color: olive;
+    }
+
+  }
+      
+      @media screen and (max-width: 750px) {
+          
+        .square{
+            width:600px;
+            height: 500px;
+          background-color: olive;
+        }
+      }
+
+      @media only screen and (max-width: 650px) {
+          
+       .square{
+            width:500px;
+            height: 600px;
+          background-color: olive;
+        }
+      }
+
+      @media only screen and (max-width: 500px) {
+          
+        
+        .square{
+            width:400px;
+            height: 600px;
+          background-color: olive;
+        }
+      } 
+
+      @media only screen and (max-width: 400px) {
+          
+       
+        .square{
+            width:300px;
+            height: 500px;
+          background-color: olive;
+        }
+      } 
+
+      @media only screen and (max-width: 300px) {
+          
+      
+        .square{
+            width:200px;
+            height: 400px;
+          background-color: olive;
+        }
+      } 
