--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,163 +1,145 @@
-*{
+* {
   background-color: #e1d7c7;
 }
 
 main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    height: 86vh;
-  
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 86vh;
+}
 
-  nav{
-    background-color: #7da11a;
-  }
-  #unico{
-    color: #f7f8ed;
-    background-color: #7da11a;
-  }
+nav{
+  background-color: #7da11a;
+}
+
+#unico{
+  color: #f7f8ed;
+  background-color: #7da11a;
+}
+
+#map {
+  position: absolute;
+  width: 100%;
+  height: 500px;
+}
 
 #navList{
-  list-style: none; 
+  list-style: none;
 }
 
 main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    height: 86vh;
-  
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  height: 86vh;
+}
 
-  nav{
-    background-color: #7da11a;
-  }
+nav{
+  background-color: #7da11a;
+}
 
-  #unico{
-    color: #f7f8ed;
-    background-color: #7da11a;
-  }
+#unico{
+  color: #f7f8ed;
+  background-color: #7da11a;
+}
 
-  
 .square {
-    background-color: #f7f8ed;
-    width: 800px;
-    height: 550px;
-    border-radius: 3%; 
-  }
+  background-color: #f7f8ed;
+  width: 100%;
+  height: 500px;
+}
 
-  h4{
-      text-align: center;
-      
-    }
+h4 {
+  text-align: center;
+}
 
-    footer{
-      background-color: #7da11a;
-    }
+footer {
+  background-color: #7da11a;
+}
 
-    .text-footer{
-      color: #f7f8ed;
-    }
+.text-footer {
+  color: #f7f8ed;
+}
 
-    /* Article page styling */
-    .article{
-      margin: auto;
-      
-    }
-    .heading{
-      font-size: 30px;
-      font-weight: bolder;
-    }
-
-    .content{
-      font-size: 20px;
-    }
-
-    #carimg {
-      width: 700px; 
-    }
-
-    a:link { text-decoration: none; }
-    a:visited { text-decoration: none; }
-    a:hover { text-decoration: none; }
-    a:active { text-decoration: none; }
-
-    /* Article page styling End */
-    @media screen and (max-width: 950px) {
-        
-        
-    .square{
-            width:800px;
-            height: 500px;
-          background-color: olive;
-        }
-
-    }
-
-    @media  screen and (max-width: 850px){
-
-      .square{
-        width:700px;
-        height: 500px;
-      background-color: olive;
-    }
-
-
-  }
-      
+/* Article page styling */
+.article{
+  margin: auto;
 
 }
-      
-      
-   
-      @media screen and (max-width: 750px) {
-          
-        .square{
-            width:600px;
-            height: 500px;
-          background-color: olive;
-        }
-      }
+.heading{
+  font-size: 30px;
+  font-weight: bolder;
+}
 
-      @media only screen and (max-width: 650px) {
-          
-       .square{
-            width:500px;
-            height: 600px;
-          background-color: olive;
-        }
-      }
+.content{
+  font-size: 20px;
+}
 
-      @media only screen and (max-width: 500px) {
-          
-        
+#carimg {
+  width: 700px;
+}
 
-        .square{
-            width:400px;
-            height: 600px;
-          background-color: olive;
-        }
-      } 
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
 
-      @media only screen and (max-width: 400px) {
-          
+/* Article page styling End */
+@media screen and (max-width: 950px) {
+  .square {
+  width:800px;
+  height: 500px;
+  background-color: olive;
+  }
+}
 
-        .square{
-            width:300px;
-            height: 500px;
-          background-color: olive;
-        }
-      } 
+@media  screen and (max-width: 850px) {
+  .square {
+    width:700px;
+    height: 500px;
+    background-color: olive;
+    }
+}
 
-      @media only screen and (max-width: 300px) {
-          
+@media screen and (max-width: 750px) {
+  .square{
+      width:600px;
+      height: 500px;
+    background-color: olive;
+  }
+}
 
-        .square{
-            width:200px;
-            height: 400px;
-          background-color: olive;
-        }
-      } 
+@media only screen and (max-width: 650px) {
+  .square{
+    width:500px;
+    height: 600px;
+    background-color: olive;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .square{
+    width:400px;
+    height: 600px;
+    background-color: olive;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .square{
+    width:300px;
+    height: 500px;
+    background-color: olive;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .square{
+    width:200px;
+    height: 400px;
+    background-color: olive;
+  }
+}
