--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,21 @@ nav {
 
 /* Search Bar  */
 
-#search-bar {
-  border-top: 2px solid black;
+.search-bar {
   border-radius: 0px;
   height: 75px;
-  font-size: 20px;
+  width: 100%;
+  font-size: 30px;
+  color: green;
+  border: 0;
+  text-align: center;
+}
+
+.go-btn {
+  width: 100%;
+  border: none;
+  background-color: green;
+  color: white;
 }
 
 #unico{
@@ -56,7 +66,7 @@ nav {
   flex-direction: column;
   align-items: flex-start;
   gap: .25rem;
-  
+
 }
 
 input{
