--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,46 +1,52 @@
-* {
-  background-color: white;
-}
-
 main {
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
   height: 86vh;
+  font-family: 'Work Sans', sans-serif;
 }
 
 nav {
-  background-color: #7da11a;
+  background-color: #000000;
+}
+
+#nav-links {
+  font-family: 'Work Sans', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+#burger-icon {
+  color: white;
+}
+
+#water-drop {
+  height: 40px;
 }
 
 /* Search Bar  */
-
 .search-bar {
   border-radius: 0px;
   height: 75px;
   width: 100%;
   font-size: 30px;
-  color: green;
+  font-weight: bold;
   border: 0;
+  background-color: rgb(225, 225, 225);
   text-align: center;
 }
 
 .go-btn {
   width: 100%;
+  height: 50px;
   border: none;
-  background-color: green;
+  background-color: rgb(12, 12, 12);
   color: white;
 }
 
-#unico{
-  color: #f7f8ed;
-  background-color: #7da11a;
-}
-
 #map-area {
-  border: 2px solid black;
-  overflow: hidden;
+  border: 1px solid black;
 }
 
 #map {
@@ -49,39 +55,18 @@ nav {
 
 #stations {
   max-height: 550px;
+  overflow-y: scroll;
 }
 
 .fuelCard {
   padding: 10px 0px;
   border-bottom: 1px solid grey;
   overflow-y: scroll;
+  line-height: 0.75;
 }
 
-#navList{
-  list-style: none;
-}
-.search-Wrapper{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: .25rem;
-
-}
-
-input{
-  font-size: 1rem;
-}
-
-.search-Wrapper{
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: .25rem;
-
-}
-
-input{
-  font-size: 1rem;
+.stn-name {
+  font-weight: bolder;
 }
 
 main {
@@ -92,21 +77,14 @@ main {
   height: 86vh;
 }
 
-nav{
-  background-color: #7da11a;
-}
-
 #unico{
-  color: #f7f8ed;
-  background-color: #7da11a;
+  font-family: 'Dela Gothic One', cursive;
+  font-size: 50px;
+  color: white;
 }
 
 h4 {
   text-align: center;
-}
-
-footer {
-  background-color: #7da11a;
 }
 
 .text-footer {
@@ -135,60 +113,3 @@ a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
 a:hover { text-decoration: none; }
 a:active { text-decoration: none; }
-
-/* Article page styling End */
-@media screen and (max-width: 950px) {
-  .square {
-  width:800px;
-  height: 500px;
-  background-color: olive;
-  }
-}
-
-@media  screen and (max-width: 850px) {
-  .square {
-    width:700px;
-    height: 500px;
-    background-color: olive;
-    }
-}
-
-@media screen and (max-width: 750px) {
-  .square{
-      width:600px;
-      height: 500px;
-    background-color: olive;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .square{
-    width:500px;
-    height: 600px;
-    background-color: olive;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .square{
-    width:400px;
-    height: 600px;
-    background-color: olive;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  .square{
-    width:300px;
-    height: 500px;
-    background-color: olive;
-  }
-}
-
-@media only screen and (max-width: 300px) {
-  .square{
-    width:200px;
-    height: 400px;
-    background-color: olive;
-  }
-}
